Update compositor configuration

--- a/.config/i3/compton.conf
+++ b/.config/i3/compton.conf
@@ -1,4 +1,5 @@
 # Thank you code_nomad: http://9m.no/ꪯ鵞
+# Also https://github.com/chjj/compton/wiki/perf-guide
 
 #################################
 #
@@ -16,6 +17,8 @@ backend = "glx";
 #
 #################################
 
+# Usually increases performance quite significantly (around 15%). Its only problem I currently know is a theoretical risk of
+# repainting a single area for multiple times. I have never seen this happening, however.
 glx-no-stencil = true;
 
 # GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
@@ -138,7 +141,7 @@ blur-background-exclude = [
 #################################
 
 # Fade windows during opacity changes.
-fading = true;
+fading = false;
 # The time between steps in a fade in milliseconds. (default 10).
 fade-delta = 4;
 # Opacity change between steps while fading in. (default 0.028).
@@ -232,4 +235,4 @@ wintypes:
     };
 };
 
-opacity-rule = ["85:class_g= 'Gnome-terminal'"];
+# opacity-rule = ["85:class_g= 'Gnome-terminal'"];
