Add i3wm sound and brightness controls

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -197,10 +197,20 @@ exec --no-startup-ud setxkbmap -option caps:super
 bindsym Print exec xfce4-screenshooter
 #bindsym Print exec scrot -e 'mv $f ~/Dropbox/Screenshots'
 
+# Player controls
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym CXF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
+
+# Sound control
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+
+# Brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightness
 
 # Clear notifications hack
 bindsym $mod+c exec pkill notifyd
