--- a/.config/i3/config
+++ b/.config/i3/config
@@ -174,7 +174,10 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command py3status -c ~/.config/i3/i3status.conf
+        i3bar_command /home/don/dev/i3/builddir/i3bar
+        status_command py3status --config ~/.config/i3/i3status.conf
+        output primary
+        position top
 }
 
 
@@ -228,6 +231,10 @@ exec --no-startup-id dropbox start
 # Network manager
 exec --no-startup-id nm-applet
 
+# Notifications
+#exec --no-startup-id dunst
+#exec --no-startup-id dunst
+
 
 ###############################################################################
 #                                   APPEARANCE 
@@ -246,5 +253,9 @@ default_border pixel
 ###############################################################################
 
 for_window [class="^galculator$"] floating enable
-for_window [class="jetbrains-studio" title="^win\d+$"] focus
+for_window [class="jetbrains-studio" title="^win\d+$"] focus#, move absolute position cursor
 
+#for_window [class="jetbrains-*" title="Open.File.or.Project"] resize set 500 1000, move absolute position cursor
+#for_window [class="jetbrains-*" title="Settings"] fullscreen
+#for_window [class="jetbrains-*" title="Run/Debug*"] fullscreen
+#for_window [class="jetbrains-*" title="Breakpoints"] fullscreen
