--- a/.config/i3/config
+++ b/.config/i3/config
@@ -171,12 +171,15 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+###############################################################################
+#                                   BAR 
+###############################################################################
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         i3bar_command /home/don/dev/i3/builddir/i3bar
         status_command py3status --config ~/.config/i3/i3status.conf
-        output primary
         position top
 }
 
