i3: switch to dunst for notifications

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -236,7 +236,7 @@ exec --no-startup-id nm-applet
 
 # Notifications
 #exec --no-startup-id dunst
-#exec --no-startup-id dunst
+exec --no-startup-id dunst
 
 
 ###############################################################################
