--- a/.config/i3/config
+++ b/.config/i3/config
@@ -69,9 +69,6 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
-# focus the child container
-bindsym $mod+d focus child
-
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
@@ -194,7 +191,7 @@ exec --no-startup-ud setxkbmap -option caps:super
 
 # Player controls
 bindsym XF86AudioPlay exec playerctl play-pause
-bindsym CXF86AudioPause exec playerctl pause
+bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
