--- a/.config/i3/config
+++ b/.config/i3/config
@@ -198,6 +198,10 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightness
 
+# Output
+bindsym $mod+p exec --no-startup-id xrandr --auto
+bindsym $mod+Shift+p exec --no-startup-id ~/.screenlayout/home-desk-right-vertical.sh
+
 ###############################################################################
 #                                   STARTUP 
 ###############################################################################
