--- a/.config/i3/config
+++ b/.config/i3/config
@@ -245,5 +245,8 @@ default_border pixel
 ###############################################################################
 
 for_window [class="^galculator$"] floating enable
-for_window [class="jetbrains-studio" title="^win\d+$"] focus
 
+# This mostly fixes floating windows for Android Stuio, but it's better to add 
+# suppress.focus.stealing=false
+# to Help -> Custom Properties
+#for_window [class="jetbrains-studio" title="^win\d+$"] focus
