--- a/.config/i3/config
+++ b/.config/i3/config
@@ -208,6 +208,12 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightnes
 bindsym $mod+p exec --no-startup-id xrandr --auto
 bindsym $mod+Shift+p exec --no-startup-id ~/.screenlayout/home-desk-right-vertical.sh
 
+# Screen lock
+bindsym $mod+o exec --no-startup-id i3lock -c 000000
+
+# Workspace shortcuts
+bindsym $mod+c workspace chat
+
 ###############################################################################
 #                                   STARTUP 
 ###############################################################################
