--- a/.config/i3/config
+++ b/.config/i3/config
@@ -211,6 +211,9 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightnes
 bindsym $mod+p exec --no-startup-id xrandr --auto
 bindsym $mod+Shift+p exec --no-startup-id ~/.screenlayout/home-desk-right-vertical.sh
 
+# Power
+bindsym $mod+o exec --no-startup-id i3lock -c 000000
+
 ###############################################################################
 #                                   STARTUP 
 ###############################################################################
